@@ -4,6 +4,7 @@ version 7.6.3
 
 * fixed PEM import zipimporter error message - was more of a warning, supressed if not using pyopenssl
 * fixed a harvester not found exception in harvester
+* fixed powershell teensy conversion error when printing output
 
 ~~~~~~~~~~~~~~~~
 7.6.2
